force-app/main/default/objects/Integration_Mapping__c/fields/Integration_Field__c.field-meta.xml
<CustomField>
    <fullName>Integration_Field__c</fullName>
    <label>Integration Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>