force-app/main/default/objects/Integration_Mapping__c/fields/Integration_Object__c.field-meta.xml
<CustomField>
    <fullName>Integration_Object__c</fullName>
    <label>Integration Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>