force-app/main/default/objects/Integration_Mapping__c/fields/Sync_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sync_Direction__c</fullName>
    <label>Sync Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>From Salesforce</fullName>
            </value>
            <value>
                <fullName>To Salesforce</fullName>
            </value>
            <value>
                <fullName>Bidirectional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>