force-app/main/default/objects/Integration_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Salesforce_Object__c</columns>
    <columns>Salesforce_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>