force-app/main/default/objects/Integration_Mapping__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Salesforce_Field__c</columns>
    <columns>Salesforce_Object__c</columns>
    <columns>Sync_Direction__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Key__c</columns>
    <columns>Integration_Object__c</columns>
    <columns>Integration_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>